--- a/unwrap-smt/docker-compose-jdbc.yaml
+++ b/unwrap-smt/docker-compose-jdbc.yaml
@@ -17,6 +17,8 @@ services:
     environment:
       - ALLOW_PLAINTEXT_LISTENER=yes
       - KAFKA_CFG_ZOOKEEPER_CONNECT=zookeeper:2181
+      - KAFKA_LISTENERS=PLAINTEXT://:9092
+      - KAFKA_ADVERTISED_LISTENERS=PLAINTEXT://localhost:9092
   mysql:
     image: mysql:8.0
     ports:
